--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Lab_6_Java</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="task_name">Task Name:</string>
+    <string name="select_date">Select Date:</string>
+    <string name="task_description">Task Description:</string>
+    <string name="task_type">Task Type:</string>
+    <string name="personal">Personal</string>
+    <string name="work">Work</string>
+    <string name="leisure">Leisure</string>
+    <string name="save">Save</string>
 </resources>
