--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="work">Work</string>
     <string name="leisure">Leisure</string>
     <string name="save">Save</string>
+    <string name="add_task">Add Task</string>
+    <string name="view_tasks">View Tasks</string>
+    <string name="pick_a_date">Pick a Date</string>
+    <string name="alarm">Alarm?</string>
+    <string name="x">X</string>
+    <string name="this_is_invisible_text">This is invisible text</string>
+    <string name="due_date">Due date</string>
+    <string name="edit">Edit</string>
 </resources>
